<resources>
    <string name="app_name">SelfCheckout</string>
    <string name="scan">Scan</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="pay">Pay</string>
    <string name="up_arrow">^</string>
    <string name="down_arrow">v</string>
    <string name="tap_to_scan">Place a barcode inside the viewfinder rectangle to scan it.</string>


</resources>
