<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Self Checkout->Account"
        android:id="@+id/AccountTextView"
        android:gravity="center"
        android:layout_weight="0.08"
        android:textColor="@color/abc_background_cache_hint_selector_material_light"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="Infomation                                         >"
            android:id="@+id/Item1Button"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="textStart"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="Payment                                              >"
            android:id="@+id/Item2Button"
            android:layout_below="@+id/Item1Button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="textStart"
            android:textSize="20dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scan" />

        <Button
            android:id="@+id/cart_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cart" />

        <Button
            android:id="@+id/account_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/account" />

    </LinearLayout>

</LinearLayout>